--- a/PracticeAPI/appsettings.json
+++ b/PracticeAPI/appsettings.json
@@ -7,7 +7,7 @@
   }, 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-O528O8I;Database=PracticeDb;Trusted_connection=true;TrustServerCertificate=true"
+    "DefaultConnection": "Host=dpg-d2o2587diees73evkip0-a;Port=5432;Database=jakepostgresdb;Username=jakepostgresdb_user;Password=3d9FYaQNO3PtFqno0BgWojHR9CsVhA9h"
   },
   "JwtSettings": {
     "SecretKey": "2zFf3kVu9QFxlH7J5N8E+0vUgHzkELyNKNbZ4lCmnXY=,", // Use env variable or user secrets for prod: null,
