- removed extra spaces on connectstring - added test db connection endpoint

--- a/PracticeAPI/appsettings.json
+++ b/PracticeAPI/appsettings.json
@@ -7,7 +7,7 @@
   }, 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-d2o2587diees73evkip0-a.singapore-postgres.render.com;Port=5432;Database=jakepostgresdb;Username=jakepostgresdb_user;Password=3d9FYaQNO3PtFqno0BgWojHR9CsVhA9h;Ssl Mode=Require;Trust Server Certificate=true;"
+    "DefaultConnection": "Host=dpg-d2o2587diees73evkip0-a.singapore-postgres.render.com;Port=5432;Database=jakepostgresdb;Username=jakepostgresdb_user;Password=3d9FYaQNO3PtFqno0BgWojHR9CsVhA9h;SslMode=Require;TrustServerCertificate=true;"
   },
   "JwtSettings": {
     "SecretKey": "2zFf3kVu9QFxlH7J5N8E+0vUgHzkELyNKNbZ4lCmnXY=,", // Use env variable or user secrets for prod: null,
